Fixed wrapping of sorting buttons

--- a/static/main.scss
+++ b/static/main.scss
@@ -158,6 +158,10 @@ html, body {
     outline: none;
 }
 
+.sort-buttons {
+    white-space: nowrap;
+}
+
 /*CHECKBOXES*/
 
 .vis-hidden {
